--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
 <resources>
     <string name="app_name">Baking</string>
     <string name="title_activity_detail">Recipe Detail</string>
+    <string name="ingredients">Ingredients</string>
+    <string name="video_load_error">The video could not be loaded. Check your Internet connection.</string>
 </resources>
