--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="app_name">Baking</string>
     <string name="title_activity_detail">Recipe Detail</string>
     <string name="ingredients">Ingredients</string>
+    <string name="servings_format">Serving for %1$d person</string>
     <string name="video_load_error">The video could not be loaded. Check your Internet connection.</string>
 </resources>
