--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,9 @@
     <string name="servings_format">Serving for %1$d person</string>
     <string name="ingredients_format">%1$d ingredients</string>
     <string name="steps_format">%1$d steps</string>
-    <string name="video_load_error">The video could not be loaded. Check your Internet connection.</string>
     <string name="add_ingredients_button_text">Add ingredients to the widget</string>
     <string name="empty_string">The ingredients list is empty</string>
+    <string name="network_error">Network error, please try again later.</string>
+    <string name="video_error">The video could not be loaded, please try again later.</string>
+    <string name="retry">Retry</string>
 </resources>
